* Performance improvement to inline style generation (used by calendar and message boxes) (Will Dean)

New Searches

* dseek - downseek.com software search
* cs - ConsumerSearch.com search meta-reviews of other reviews (from Gregory Krohne)
* hb - Hotbot.com search (from Gregory Krohne)
* otn - Oracle Technology Network search (from Gregory Krohne)

Bug Fixes

* Installation script now sets approved shell extension registry key for WinNT and it's descendants (from Brent Beardsley)
* Fix for bug [ 643947 ] up/down keys incompatible with Japanese (from Gregg Tavares)

Modified Searches

* fe - now allows you to specify an extension name instead of only the first letter (from Matthew McDougal)
* configure - localized it and added Reload menu option, fixed bug when addons directory did not exist (from Brent Beardsley)
* amaz - added /referral switch for building referral links for Amazon

Miscellaneous

* Corrected documentation in help for adding a local, user search.


-- What's new for 3.1.5 (December 15, 2002)

Enhancements

* Added "mozillacal" as an option for the defaultcal preference to bring up the Mozilla calendar (although it doesn't go to the selected date yet)
* Moved the Computer and Reference searches into menu subcategories.
* Added parseArgsEx and trimWhitespace functions for additional argument parsing capabilities (from Brent Beardsley)
* Added ability to change specify the first day of the week (from Harry-Anton Talvik)
* Added Estonian calendar - holidays.et.xml (from Harry-Anton Talvik)
* Added Lyricsfind search by Steve Heil

New Searches

* txp - Search the tweak database on tweakxp.com (from Wolfgang Deutsch)
* chmodconv - convert chmod numbers to strings and vice versa (from Brent Beardsley)
* bb - Search BestBuy (from Glenn Carr)
* lipsum - Generate Lorem Ipsum text (from Glenn Carr)
* amo - Search Amo's Online Crossword Dictionary (from Matthew McDougal)